fix(user-menu-scss): Fixes contrast on avatar

--- a/client/scss/components/_user-menu.scss
+++ b/client/scss/components/_user-menu.scss
@@ -210,6 +210,10 @@ $avatar-margin: 2rem;
       }
     }
 
+    &:not(:checked) ~ #UserMenuToggle {
+      border-color: $black-lightened;
+    }
+
     ~ menu {
       top: 0;
       bottom: 0;
